<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="applyViewModel"
            type="jp.co.cybermissions.com.example.tourinformation.apply.ApplyViewModel" />
    </data>

    <ScrollView
        android:layout_width="401dp"
        android:layout_height="460dp">


        <!--            <Button-->
        <!--                android:id="@+id/button"-->
        <!--                android:layout_width="100dp"-->
        <!--                android:layout_height="50dp"-->
        <!--                android:backgroundTint="#00FF00"-->
        <!--                android:onClick="@{() -> applyViewModel.onSubmitApplication()}"-->
        <!--                android:text="Ok"-->
        <!--                android:background="@color/colorAccent"-->
        <!--                android:textColor="@color/black"-->
        <!--                android:textSize="@dimen/button_text_size" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/apply_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/apply_name" />

            <EditText
                android:id="@+id/EditTextName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_top"
                android:ems="10"
                android:singleLine="true"
                app:layout_constraintBottom_toTopOf="@+id/EditTextEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/apply_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/apply_email" />

            <EditText
                android:id="@+id/EditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_top"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                app:layout_constraintBottom_toTopOf="@+id/EditTextCountry"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/apply_phone_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/apply_phone" />

            <EditText
                android:id="@+id/EditTextPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_top"
                android:ems="10"
                android:singleLine="true"
                android:inputType="phone"
                app:layout_constraintBottom_toTopOf="@+id/ok_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <Button
                android:id="@+id/ok_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@color/colorAccent"
                android:onClick="@{() -> applyViewModel.onSubmitApplication()}"
                android:text="Ok"
                android:textColor="@color/black"
                android:textSize="@dimen/button_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
 />


        </LinearLayout>
    </ScrollView>

</layout>