<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <variable
            name="placedetailViewModel"
            type="jp.co.cybermissions.com.example.tourinformation.place_detail.PlaceDetailViewModel" />
    </data>

<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<!--                    <LinearLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="20dp"-->
<!--                        android:orientation="vertical">-->

<!--                        <TextView-->
<!--                            android:id="@+id/detail_text"-->
<!--                            android:layout_width="368dp"-->
<!--                            android:layout_height="535dp"-->
<!--                            android:text="@{placedetailViewModel.currentplace}"-->
<!--                            android:textColor="@color/black"-->
<!--                            android:textSize="@dimen/detail_text"-->
<!--                            app:layout_constraintEnd_toEndOf="parent"-->
<!--                            app:layout_constraintStart_toStartOf="parent"-->
<!--                            app:layout_constraintTop_toTopOf="parent" />-->

        <!--        <TextView-->
<!--            android:id="@+id/detail_text"-->
<!--            android:layout_width="354dp"-->
<!--            android:layout_height="442dp"-->
<!--            android:text="@{placedetailViewModel.name}"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="@dimen/detail_text"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/button" />-->

<!--        <ScrollView-->
<!--            android:layout_width="373dp"-->
<!--            android:layout_height="325dp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/cancel"-->
<!--            tools:layout_editor_absoluteX="22dp">-->

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="1000dp"-->
<!--                android:orientation="vertical">-->

<!--                <TextView-->
<!--                    android:id="@+id/detail_text"-->
<!--                    android:layout_width="360dp"-->
<!--                    android:layout_height="356dp"-->
<!--                    android:text="@{placedetailViewModel.name}"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:textSize="@dimen/detail_text"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->

<!--                <TextView-->
<!--                    android:id="@+id/txt"-->
<!--                    android:layout_width="360dp"-->
<!--                    android:layout_height="356dp"-->
<!--                    android:text="@{placedetailViewModel.about}"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:textSize="@dimen/detail_text" />-->

<!--                <Button-->
<!--                    android:id="@+id/restaurant"-->
<!--                    android:layout_width="200dp"-->
<!--                    android:layout_height="50dp"-->
<!--                    android:layout_marginStart="@dimen/margin"-->
<!--                    android:layout_marginTop="10dp"-->
<!--                    android:background="@color/colorAccent"-->
<!--                    android:text="@string/restaurant"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/detail_text" />-->
<!--            </LinearLayout>-->
<!--        </ScrollView>-->

        <Button
            android:id="@+id/restaurant"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:text="@string/restaurant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_text" />

        <TextView
            android:id="@+id/detail_text"
            android:layout_width="365dp"
            android:layout_height="440dp"
            android:text="@{placedetailViewModel.currentplace}"
            android:textColor="@color/black"
            android:textSize="@dimen/detail_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/hotel"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="12dp"
            android:background="@color/colorAccent"
            android:text="@string/hotel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurant" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="12dp"
            android:background="@color/colorAccent"
            android:text="@string/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotel" />


<!--        <TextView-->
<!--            android:id="@+id/textView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_marginTop="476dp"-->
<!--            android:text="@{placedetailViewModel.name}"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="@dimen/detail_text"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="1.0"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->
<!--        <Button-->
<!--            android:id="@+id/button"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:onClick="@{() -> placedetailViewModel.buttonClicked()}"-->
<!--            android:text="Button"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.0"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/textView" />-->

        <!--        <Button-->
<!--            android:id="@+id/button"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:onClick="@{() -> placedetailViewModel.buttonClicked()}"-->
<!--            android:text="Button"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.0"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/textView" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
<!--                    </LinearLayout>-->
<!--    </ScrollView>-->
</layout>